trying to fix the footer icon spacing

--- a/theme/flaskymod/static/css/style.css
+++ b/theme/flaskymod/static/css/style.css
@@ -185,7 +185,7 @@ div.social ul {
 
 div.social li {
   display: inline;
-  margin: 0 10px;
+  margin: 0 20px;
 }
 
 /* margins and stuff */
